# PluginsDevBot

./: .gitignore  README.md  pyproject.toml  start.bat
configs/: config.yml  messages.yml
src/: bot.py  main.py  utils.py
src/admin/: base.py  wait.py
src/admin/callbacks/: __init__.py  admin_password.py  back.py  shop_manager.py
src/api/aiogram/: __init__.py
src/api/aiogram/bot/: __init__.py  bot.py  keyboard.py
src/api/bot/: __init__.py  bot.py  keyboard_factory.py
src/api/bot/command/: __init__.py  base.py  handler.py  text.py
src/api/bot/keyboard/: __init__.py  callback.py  keyboard.py
src/api/bot/payment/: provider.py  yoomoney.py
src/api/bot/types/: __init__.py  callback.py  message.py  payment.py
src/api/configs/: __init__.py  factory.py
src/api/configs/core/: base.py  types.py
src/api/configs/serializers/: base.py  json.py
src/api/log/: shared.py
src/api/order/: order.py
src/api/placeholder/: __init__.py  placeholder.py
src/callbacks/: __init__.py  shop.py
src/callbacks/admin/: __init__.py  back.py  shop_manager.py
src/commands/: __init__.py  admin.py  start.py
src/configs/: __init__.py  config.py  manager.py  messages.py
src/configs/core/: __init__.py  file.py
src/configs/deserializers/: base.py  json.py  yaml.py
src/configs/serializers/: __init__.py  yaml.py
src/database/: db.py
src/keyboard/: __init__.py  manager.py
src/log/: __init__.py
src/shop/: __init__.py  database.py  model.py  payment_handler.py  repository.py
src/shop/database/: __init__.py  database.py  orm.py  repository.py
(+8 files in other folders)
